fix: font size changes reverted and removed extra padding (#1069)

--- a/code/frontend/src/components/Answer/Answer.module.css
+++ b/code/frontend/src/components/Answer/Answer.module.css
@@ -199,7 +199,8 @@ sup {
     }
 }
 
-@media screen and (max-width: 1280px) {
+/* Styles for 1280p resolution at 200% zoom */
+@media screen and (max-width: 640px) {
     .answerContainer, .answerText {
         font-size: 0.6rem !important;
     }
